Archive/tests/snapshots/ui__compact.snap
---
source: tests/ui.rs
expression: terminal.backend().to_string()
---
"┌[ ] Navigation · [* Content] [Q Queue · 1]──────────────────────────────────────────────┐"
"│  Home │ ▶ Search │   Charts │   Pods │   Library │   Favs │   History │   Settings     │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"╔[*] Search · focused content════════════════════════════════════════════════════════════╗"
"║Query: night coding  ·  Filter: Songs                                                   ║"
"║                                                                                        ║"
"║▶ 月明かり écho 👩‍💻 — a title long enough to test cell-safe clipping — Terminal Ensemble ║" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " "), (18, " ")]
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"║                                                                                        ║"
"╚════════════════════════════════════════════════════════════════════════════════════════╝"
"┌[ ] Player · persistent─────────────────────────────────────────────────────────────────┐"
"│❚❚  月明かり écho 👩‍💻 — a title long enough to test cell-safe clipping — Terminal Ensemb…│" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (20, " ")]
"│01:13/04:05 T80 E80 S:off R:Off Ra:off                                                  │"
"│[p Previous] [⇧← −10s] [Space Pause] [⇧→ +10s] [n Next] ██████░░░░░░░░░░░░░░            │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
