Archive/tests/snapshots/ui__palette.snap
---
source: tests/ui.rs
expression: terminal.backend().to_string()
---
"╔[*] ▶ Home════════════════════════════╗"
"║╔[*] Command palette · type to filter╗║"
"║║Query:                              ║║"
"║║▶ Quit                         q    ║║"
"║║  Toggle help                  ?    ║║"
"║║  Open search                  /    ║║"
"║║  Open command palette         :    ║║"
"║║  Play or pause                Spac…║║"
"╚╚════════════════════════════════════╝╝"
"❚❚ 月明かり/Termin 1:13/4:05 v80/80· s-e" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " ")]
