Archive/tests/snapshots/ui__wide.snap
---
source: tests/ui.rs
expression: terminal.backend().to_string()
---
"┌[ ] Navigation──────┐╔[*] Search · focused content══════════════════════════════════════════════════════╗┌[ ] Queue · 1───────────────────┐"
"│  Home              │║Query: night coding  ·  Filter: Songs                                             ║│▶ 月明かり écho 👩‍💻 — a title lo…│" Hidden by multi-width symbols: [(110, " "), (112, " "), (114, " "), (116, " "), (124, " ")]
"│▶ Search            │║                                                                                  ║│                                │"
"│  Charts            │║▶ 月明かり écho 👩‍💻 — a title long enough to test cell-safe clipping — Terminal En…║│                                │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " "), (32, " "), (40, " ")]
"│  Podcasts          │║                                                                                  ║│                                │"
"│  Library           │║                                                                                  ║│                                │"
"│  Favorites         │║                                                                                  ║│                                │"
"│  History           │║                                                                                  ║│                                │"
"│  Settings          │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"│                    │║                                                                                  ║│                                │"
"└────────────────────┘╚══════════════════════════════════════════════════════════════════════════════════╝└────────────────────────────────┘"
"┌[ ] Player · persistent───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│❚❚  月明かり écho 👩‍💻 — a title long enough to test cell-safe clipping — Terminal Ensemble  ·  Playing                                     │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (20, " ")]
"│01:13 / 04:05   Target 80%   Effective 80%                                                                                                │"
"│[p Previous] [⇧← −10s] [Space Pause] [⇧→ +10s] [n Next] ██████░░░░░░░░░░░░░░   Shuffle off   Repeat Off   Radio off                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
